# ktu-image-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: ImageProcessor.cpp  ImageProcessor.h  QMat.h
src/core/filters/: Centroid.cpp  Centroid.h  ContrastStretch.cpp  ContrastStretch.h  Dilation.cpp  Dilation.h  Erosion.cpp  Erosion.h  Filter.h  Gaussian.cpp  Gaussian.h  HistogramEqualization.cpp  HistogramEqualization.h  Mean.cpp  Mean.h  Median.cpp  Median.h  Mirror.cpp  Mirror.h  Prewitt.cpp  Prewitt.h  Rotate.cpp  Rotate.h  Sharpen.cpp  Sharpen.h  Shift.cpp  Shift.h  Skeletonization.cpp  Skeletonization.h  Sobel.cpp  Sobel.h  ThresholdKapur.cpp  ThresholdKapur.h  ThresholdManual.cpp  ThresholdManual.h  ThresholdOtsu.cpp  ThresholdOtsu.h
src/gui/: MainWindow.cpp  MainWindow.h
